--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
           <img class="image-box" src="https://www.berg-hansen.no/content/uploads/2021/06/20210609_114302-scaled.jpg" alt="">
 
         <div class="text-box">
-          <h3>Velkommen til Trolltunga</h3>
-          <p></p>
+          <div class="OVER"><h1>Velkommen til Trolltunga</h1></div>
         </div>
       </section>
 
@@ -33,7 +32,7 @@
           <h3>Trolltunga</h3>
           <p>Trolltunga er en lang og krevende tur. Fra Parkering 2 (P2) er det kraftig stigning på asfaltert vei før man kommer opp på fjellet. Dersom man går fra P2, tar turen ca. 8-12 timer tur-retur. Med utgangspunkt i at turen går fra Parkering 3 (P3) "Mågelitopp" er turen en god del lettere, da man slipper å starte med den kraftige oppgangen på asfalt, men derimot kan begynne å gå rett innover fjellet, ca. tid 7-10 timer tur-retur. Anbefalt årstid for denne turen er juni-oktober, men jo lenger utover høsten, desto mindre sjanse for en dag uten skyer, og været skifter fort i fjellet, så vær forsiktig. Det er også mulig å parkere bil på alle parkeringene, både P1, P2 og P3 det kommer en ekstra avgift dersom man ønsker å parkere på P3, og her er det begrenset plass, så husk å booke parkering på forhånd. Det er en lang tur, så ha med rikelig med drikke og mat, du skal være ute i mange timer, og i aktivitet. Hodelykt og varme klær er også et must.</p>
         </div>
-        
+
           <img class="image-box" src="https://assets.simpleviewcms.com/simpleview/image/fetch/c_fill,h_1080,w_1920/f_jpg/q_65/https://media.newmindmedia.com/TellUs/image/%3Ffile%3D332A28D14F62AB33E8964C05C5D0EE65F4D2AC65.jpg&dh%3D389&dw%3D800&t%3D4" alt="">
       </section>
 
