--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="#Home"><b>Velkommen</b></a>
-        <a href="#TT"><b>Trolltunga</b></a>
-        <a href="#AK"><b>Ankomst</b></a>
-        <a href="#PA"><b>Parkering</b></a>
-        <a href="#OD"><b>Odda</b></a>
-    </nav>
+      <nav class="buttonContainer">
+        <button class="button buttonColor"><a href="#Home"><b>Velkommen</b></a></button>
+        <button class="button buttonColor"><a href="#TT"><b>Trolltunga</b></a></button>
+        <button class="button buttonColor"><a href="#AK"><b>Ankomst</b></a></button>
+        <button class="button buttonColor"><a href="#PA"><b>Parkering</b></a></button>
+        <button class="button buttonColor"><a href="#OD"><b>Odda</b></a></button>
+      </nav>
     </header>
 
-    <main>
+    <main class="main">
       <section id="Home" class="Velkommen">
           <img class="image-box" src="https://www.berg-hansen.no/content/uploads/2021/06/20210609_114302-scaled.jpg" alt="">
 
